[package]
name = "JWTest"
version = "0.1.0"
edition = "2021"

build = "build.rs"


[build-dependencies]
rand = "0.8.5"
hex = "0.4.3"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.40.0", features = ["full"] }
jsonwebtoken = "9.3.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-async-std"] }
uuid = { version = "1.10.0", features = ["v4"] }
serde = { version = "1.0.210", features = ["derive"] }
time = "0.3.36"

tower-http = { version = "0.5.2", features = ["cors", "trace", "timeout"] }

# debug tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde_json = "1.0.128"
